# grokcivitas3

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 20260227_01_phase0_platform_baseline.py  20260227_02_phase0_gias_schools.py  20260228_03_phase0_postcode_cache.py  20260302_04_phase1_school_demographics_yearly.py  20260302_05_phase1_school_ofsted_latest.py  20260302_06_phase2_ofsted_inspections.py  20260302_07_phase2_area_deprivation.py  20260302_08_phase2_area_crime_context.py  20260303_09_phase2_postcode_cache_lsoa_code.py  20260303_10_phase_h5_data_quality_snapshots.py  20260303_11_phase_h6_pipeline_resilience.py  20260304_12_phase_s6_school_ethnicity_yearly.py  20260304_13_phase3_school_performance_yearly.py  20260304_14_phase_m1_ofsted_subjudgements.py  20260305_14_phase3_school_profile_perf_cache.py  20260305_15_phase_m2_demographics_support_depth.py  20260305_16_phase_m3_attendance_behaviour.py  20260305_17_phase_m4_workforce_leadership.py  20260305_18_phase_m5_area_context_house_prices.py  20260305_19_phase_m6_metric_benchmarks.py  20260305_20_phase_ai1_gias_enrichment.py  20260305_21_phase_ai2_summary_storage.py  20260305_22_phase_ai4_summary_history.py  20260306_23_phase_ai5_legacy_summary_schema_cleanup.py  20260306_24_phase_ai6_async_batch_polling.py  20260306_25_phase_ai7_analyst_summary_kind.py  20260307_26_phase_10_auth_session_foundation.py  20260308_27_phase_10_auth_pkce_hardening.py  20260308_28_phase_11_search_summary_projection.py  20260309_29_phase_10_entitlements_domain_persistence.py  20260309_30_phase_10_payment_checkout_webhooks.py  20260309_31_phase_m7_ofsted_provider_page_url.py  20260310_32_phase_14_favourites_foundation.py  20260310_33_phase_15_school_financials_yearly.py  20260310_34_merge_payment_and_financial_heads.py  20260310_35_phase_16_workforce_census_depth.py  20260310_36_phase_17_gias_join_keys.py  20260310_37_phase_17_school_admissions_yearly.py  20260311_38_phase_18_school_leaver_destinations.py  20260311_39_phase_19_subject_performance.py  (+2 more)
apps/backend/src/bootstrap_app_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/backend/tests/: conftest.py
apps/backend/tests/fixtures/: integration_database.py
apps/backend/tests/integration/: test_16_to_18_subject_performance_pipeline.py  test_access_repositories.py  test_account_api.py  test_auth_api.py  test_billing_api.py  test_billing_repositories.py  test_data_quality_repository.py  test_demographics_release_files_download.py  test_demographics_release_files_pipeline.py  test_dfe_attendance_pipeline.py  test_dfe_behaviour_pipeline.py  test_dfe_characteristics_pipeline.py  test_dfe_workforce_pipeline.py  test_favourites_api.py  test_gias_pipeline.py  test_identity_repositories.py  test_ks4_subject_performance_pipeline.py  test_leaver_destinations_pipeline.py  test_ofsted_latest_pipeline.py  test_ofsted_timeline_pipeline.py  test_ons_imd_pipeline.py  test_pipeline_resume.py  test_police_crime_context_pipeline.py  test_school_admissions_pipeline.py  test_school_compare_api.py  test_school_financial_benchmarks_pipeline.py  test_school_profile_api.py  test_school_profile_repository.py  (+10 more)
(+825 files in other folders)
