[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstrap-app-backend"
version = "0.1.0"
description = "Hexagonal backend template"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.116.1,<1",
  "pydantic>=2.11.0,<3",
  "pydantic-settings>=2.10.0,<3",
  "typer>=0.16.0,<1",
  "uvicorn>=0.35.0,<1"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0,<2",
  "pytest>=8.3.0,<9",
  "pytest-cov>=5.0.0,<6",
  "ruff>=0.12.0,<1",
  "httpx>=0.28.0,<1"
]

[project.scripts]
bootstrap-api = "bootstrap_app.api.main:run"
bootstrap-cli = "bootstrap_app.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bootstrap_app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"bootstrap_app.adapters".msg = "Domain/application must not import adapters directly. Use ports and dependency injection."

[tool.ruff.lint.per-file-ignores]
"src/bootstrap_app/api/**" = ["B008", "TID251"]
"src/bootstrap_app/cli/**" = ["TID251"]
"tests/**" = ["TID251"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=bootstrap_app --cov-report=term-missing"
