[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "civitas-backend"
version = "0.1.0"
description = "Hexagonal backend service for Civitas"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.16.0,<2",
  "fastapi>=0.116.1,<1",
  "psycopg[binary]>=3.2.0,<4",
  "pydantic>=2.11.0,<3",
  "pydantic-settings>=2.10.0,<3",
  "sqlalchemy>=2.0.0,<3",
  "typer>=0.16.0,<1",
  "uvicorn>=0.35.0,<1"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0,<2",
  "pytest>=8.3.0,<9",
  "pytest-cov>=5.0.0,<6",
  "ruff>=0.12.0,<1",
  "httpx>=0.28.0,<1"
]

[project.scripts]
civitas = "civitas.cli.main:app"
civitas-api = "civitas.api.main:run"
civitas-cli = "civitas.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["civitas*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"civitas.infrastructure".msg = "Domain/application must not import infrastructure directly. Use ports and dependency injection."

[tool.ruff.lint.per-file-ignores]
"src/civitas/api/**" = ["B008", "TID251"]
"src/civitas/cli/**" = ["TID251"]
"src/civitas/bootstrap/**" = ["TID251"]
"src/civitas/infrastructure/**" = ["TID251"]
"tests/**" = ["TID251"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=civitas --cov-report=term-missing"



